---
source: compiler-core/src/erlang/tests/functions.rs
assertion_line: 16
expression: "\nimport other\n\npub fn main() {\n  other.wibble\n}\n"
---
-module(my@mod).
-compile(no_auto_import).

-export([main/0]).

-spec main() -> fun(() -> nil).
main() ->
    fun other:wibble/0.

